<resources xmlns:tools="http://schemas.android.com/tools" tools:ignore="MissingTranslation">
    <string name="main_bg_subtitle">Tap the magnifying glass to get started.</string>
    <string name="upload_date_text">Published on %1$s</string>
    <string name="no_player_found">No stream player found. Install VLC?</string>
    <string name="no_player_found_toast">No stream player found (you can install VLC to play it).</string>
    <string name="install">Install</string>
    <string name="cancel">Cancel</string>
    <string name="ok">OK</string>
    <string name="yes">Yes</string>
    <string name="no">No</string>
    <string name="open_in_browser">Open in browser</string>
    <string name="mark_as_watched">Mark as watched</string>
    <string name="open_in_popup_mode">Open in popup mode</string>
    <string name="open_with">Open with</string>
    <string name="share">Share</string>
    <string name="download">Download</string>
    <string name="controls_download_desc">Download stream file</string>
    <string name="search">Search</string>
    <string name="search_with_service_name">Search %1$s</string>
    <string name="search_with_service_name_and_filter">Search %1$s (%2$s)</string>
    <string name="settings">Settings</string>
    <string name="did_you_mean">Did you mean \"%1$s\"?</string>
    <string name="search_showing_result_for">Showing results for: %s</string>
    <string name="share_dialog_title">Share with</string>
    <string name="use_external_video_player_title">Use external video player</string>
    <string name="use_external_video_player_summary">Removes audio at some resolutions</string>
    <string name="use_external_audio_player_title">Use external audio player</string>
    <string name="subscribe_button_title">Subscribe</string>
    <string name="subscribed_button_title">Subscribed</string>
    <string name="unsubscribe">Unsubscribe</string>
    <string name="channel_unsubscribed">Channel unsubscribed</string>
    <string name="subscription_change_failed">Could not change subscription</string>
    <string name="subscription_update_failed">Could not update subscription</string>
    <string name="show_info">Show info</string>
    <string name="tab_subscriptions">Subscriptions</string>
    <string name="tab_bookmarks">Bookmarked Playlists</string>
    <string name="tab_bookmarks_short">Playlists</string>
    <string name="tab_choose">Choose Tab</string>
    <string name="player_options_label">Play in</string>
    <string name="controls_main_title">Video player</string>
    <string name="controls_background_title">Background player</string>
    <string name="controls_popup_title">Popup player</string>
    <string name="controls_add_to_playlist_title">Add To</string>
    <string name="download_path_title">Video download folder</string>
    <string name="download_path_summary">Downloaded video files are stored here</string>
    <string name="download_path_dialog_title">Choose download folder for video files</string>
    <string name="download_path_audio_title">Audio download folder</string>
    <string name="download_path_audio_summary">Downloaded audio files are stored here</string>
    <string name="download_path_audio_dialog_title">Choose download folder for audio files</string>
    <string name="default_resolution_title">Default resolution</string>
    <string name="default_popup_resolution_title">Default popup resolution</string>
    <string name="show_higher_resolutions_title">Show higher resolutions</string>
    <string name="show_higher_resolutions_summary">Only some devices can play 1440p/4K videos</string>
    <string name="play_with_kodi_title">Play with Kodi</string>
    <string name="kore_not_found">Install missing Kore app\?</string>
    <string name="show_play_with_kodi_title">Show \"Play with Kodi\" option</string>
    <string name="show_play_with_kodi_summary">Display an option to play a video via Kodi media center</string>
    <string name="crash_the_player">Crash the player</string>
    <string name="notification_scale_to_square_image_title">Crop thumbnail to 1:1 aspect ratio</string>
    <string name="notification_scale_to_square_image_summary">Crop the video thumbnail shown in the notification from 16:9 to 1:1 aspect ratio</string>
    <string name="notification_action_0_title">First action button</string>
    <string name="notification_action_1_title">Second action button</string>
    <string name="notification_action_2_title">Third action button</string>
    <string name="notification_action_3_title">Fourth action button</string>
    <string name="notification_action_4_title">Fifth action button</string>
    <string name="notification_actions_summary">Edit each notification action below by tapping on it. Select up to three of them to be shown in the compact notification by using the checkboxes on the right.</string>
    <string name="notification_actions_summary_android13">Edit each notification action below by tapping on it. The first three actions (play/pause, previous and next) are set by the system and cannot be customized.</string>
    <string name="notification_actions_at_most_three">You can select at most three actions to show in the compact notification!</string>
    <string name="notification_action_repeat">Repeat</string>
    <string name="notification_action_shuffle">Shuffle</string>
    <string name="notification_action_buffering">Buffering</string>
    <string name="notification_action_nothing">Nothing</string>
    <string name="notification_colorize_title">Colorize notification</string>
    <string name="notification_colorize_summary">Have Android customize the notification\'s color according to the main color in the thumbnail (note that this is not available on all devices)</string>
    <string name="play_audio">Audio</string>
    <string name="general_error">Error</string>
    <string name="error_snackbar_action">Report</string>
    <string name="retry">Retry</string>
    <string name="title_licenses">Third-party Licenses</string>
    <string name="app_description">Libre lightweight streaming on Android.</string>
    <string name="contribution_title">Contribute</string>
    <string name="contribution_encouragement">Whether you have ideas of; translation, design changes, code cleaning, or real heavy code changes—help is always welcome. The more is done the better it gets!</string>
    <string name="view_on_github">View on GitHub</string>
    <string name="donation_title">Donate</string>
    <string name="donation_encouragement">NewPipe is developed by volunteers spending their free time bringing you the best user experience. Give back to help developers make NewPipe even better while they enjoy a cup of coffee.</string>
    <string name="give_back">Give back</string>
    <string name="website_title">Website</string>
    <string name="website_encouragement">Visit the NewPipe Website for more info and news.</string>
    <string name="privacy_policy_title">NewPipe\'s Privacy Policy</string>
    <string name="privacy_policy_encouragement">The NewPipe project takes your privacy very seriously. Therefore, the app does not collect any data without your consent.\nNewPipe\'s privacy policy explains in detail what data is sent and stored when you send a crash report.</string>
    <string name="read_privacy_policy">Read privacy policy</string>
    <string name="app_license_title">NewPipe\'s License</string>
    <string name="app_license">NewPipe is copyleft libre software: You can use, study, share, and improve it at will. Specifically you can redistribute and/or modify it under the terms of the GNU General Public License as published by the Free Software Foundation, either version 3 of the License, or (at your option) any later version.</string>
    <string name="read_full_license">Read license</string>
    <string name="faq_title">Frequently asked questions</string>
    <string name="faq_description">If you are having trouble using the app, be sure to check out these answers to common questions!</string>
    <string name="faq">View on website</string>
    <string name="sponsor_block">SponsorBlock</string>
    <string name="sponsor_block_enable_title">Enable SponsorBlock</string>
    <string name="sponsor_block_enable_summary">Use the SponsorBlock API to automatically skip sponsors in videos. This currently only works for YouTube videos.</string>
    <string name="sponsor_block_notifications_title">Notify when sponsors are skipped</string>
    <string name="sponsor_block_notifications_summary">Show a toast notification when a sponsor is automatically skipped.</string>
    <string name="dearrow_settings_title">DeArrow</string>
    <string name="dearrow_license_key_key" translatable="false">dearrow_license_key</string>
    <string name="dearrow_license_key_title">License Key</string>
    <string name="dearrow_license_key_summary_none">No license key set. A free or paid key can bypass rate limits.</string>
    <string name="dearrow_home_page_key">dearrow_home_page</string>
    <string name="dearrow_home_page_title">View Website</string>
    <string name="dearrow_home_page_summary">View the official DeArrow website.</string>
    <string name="dearrow_privacy_key">dearrow_privacy</string>
    <string name="dearrow_privacy_title">View Privacy Policy</string>
    <string name="dearrow_privacy_summary">View the DeArrow Privacy Policy.</string>
    <string name="dearrow_enable_key">dearrow_enable</string>
    <string name="dearrow_enable_title">Enable DeArrow</string>
    <string name="dearrow_enable_summary">Replace thumbnails and titles with crowdsourced ones from DeArrow</string>
    <string name="dearrow_replace_titles_key">dearrow_replace_titles</string>
    <string name="dearrow_replace_titles_title">Replace Titles</string>
    <string name="dearrow_replace_thumbnails_key">dearrow_replace_thumbnails</string>
    <string name="dearrow_replace_thumbnails_title">Replace Thumbnails</string>
    <string name="dearrow_title_format_key">dearrow_title_format</string>
    <string name="dearrow_title_format_title">Title Format</string>
    <string name="dearrow_remove_emojis_key">dearrow_remove_emojis</string>
    <string name="dearrow_remove_emojis_title">Remove Emojis</string>
    <string name="dearrow_format_original_titles_key">dearrow_format_original_titles</string>
    <string name="dearrow_format_original_titles_title">Format Original Titles</string>
    <string name="dearrow_format_user_submitted_titles_key">dearrow_format_user_submitted_titles</string>
    <string name="dearrow_format_user_submitted_titles_title">Format User-Submitted Titles</string>
    <string name="dearrow_capitalize_non_english_titles_key">dearrow_capitalize_non_english_titles</string>
    <string name="dearrow_capitalize_non_english_titles_title">Capitalize Words for Non-English Titles</string>
    <string name="dearrow_submit_title_hint">Custom Title (leave blank to not submit)</string>
    <string name="dearrow_submit_thumbnail_options">Thumbnail Options</string>
    <string name="dearrow_submit_timestamp">Submit current playback time as thumbnail</string>
    <string name="dearrow_submit_original">Flag original thumbnail as accurate (non-clickbait)</string>
    <string name="dearrow_api_url_key">dearrow_api_url</string>
    <string name="dearrow_api_url_title">Data Fetching Server Address</string>
    <string name="dearrow_api_url_summary">The address used to make calls to the data fetching server. Unless you have your own server instance, this should not be changed.</string>
    <string name="dearrow_default_api_url">https://sponsor.ajay.app</string>
    <string name="dearrow_thumbnail_url_key">dearrow_thumbnail_url</string>
    <string name="dearrow_thumbnail_url_title">Thumbnail Cache Server Address</string>
    <string name="dearrow_thumbnail_url_summary">The address used to fetch DeArrow thumbnails.</string>
    <string name="dearrow_default_thumbnail_url">https://dearrow-thumb.ajay.app</string>
</resources>