<?xml version="1.0" encoding="utf-8"?>
<PreferenceScreen xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:title="@string/dearrow_settings_title">

    <Preference
        app:iconSpaceReserved="false"
        android:key="@string/dearrow_home_page_key"
        android:summary="@string/dearrow_home_page_summary"
        android:title="@string/dearrow_home_page_title"/>

    <Preference
        app:iconSpaceReserved="false"
        android:key="@string/dearrow_privacy_key"
        android:summary="@string/dearrow_privacy_summary"
        android:title="@string/dearrow_privacy_title"/>

    <SwitchPreference
        app:iconSpaceReserved="false"
        android:defaultValue="false"
        android:key="@string/dearrow_enable_key"
        android:summary="@string/dearrow_enable_summary"
        android:title="@string/dearrow_enable_title"/>

    <EditTextPreference
        app:iconSpaceReserved="false"
        android:defaultValue=""
        android:key="@string/dearrow_license_key_key"
        android:summary="@string/dearrow_license_key_summary_none"
        android:title="@string/dearrow_license_key_title"/>

    <SwitchPreference
        app:iconSpaceReserved="false"
        android:defaultValue="true"
        android:key="@string/dearrow_replace_titles_key"
        android:title="@string/dearrow_replace_titles_title"
        android:dependency="@string/dearrow_enable_key"/>

    <SwitchPreference
        app:iconSpaceReserved="false"
        android:defaultValue="true"
        android:key="@string/dearrow_replace_thumbnails_key"
        android:title="@string/dearrow_replace_thumbnails_title"
        android:dependency="@string/dearrow_enable_key"/>

    <ListPreference
        app:iconSpaceReserved="false"
        android:key="@string/dearrow_title_format_key"
        android:title="@string/dearrow_title_format_title"
        android:entries="@array/dearrow_title_format_entries"
        android:entryValues="@array/dearrow_title_format_values"
        android:defaultValue="title_case"
        app:useSimpleSummaryProvider="true"
        android:dependency="@string/dearrow_replace_titles_key"/>

    <SwitchPreference
        app:iconSpaceReserved="false"
        android:defaultValue="true"
        android:key="@string/dearrow_remove_emojis_key"
        android:title="@string/dearrow_remove_emojis_title"
        android:dependency="@string/dearrow_replace_titles_key"/>

    <SwitchPreference
        app:iconSpaceReserved="false"
        android:defaultValue="true"
        android:key="@string/dearrow_format_original_titles_key"
        android:title="@string/dearrow_format_original_titles_title"
        android:dependency="@string/dearrow_replace_titles_key"/>

    <SwitchPreference
        app:iconSpaceReserved="false"
        android:defaultValue="true"
        android:key="@string/dearrow_format_user_submitted_titles_key"
        android:title="@string/dearrow_format_user_submitted_titles_title"
        android:dependency="@string/dearrow_replace_titles_key"/>

    <SwitchPreference
        app:iconSpaceReserved="false"
        android:defaultValue="false"
        android:key="@string/dearrow_capitalize_non_english_titles_key"
        android:title="@string/dearrow_capitalize_non_english_titles_title"
        android:dependency="@string/dearrow_replace_titles_key"/>



    <EditTextPreference
        app:iconSpaceReserved="false"
        android:dependency="@string/dearrow_enable_key"
        android:defaultValue="@string/dearrow_default_api_url"
        android:key="@string/dearrow_api_url_key"
        android:summary="@string/dearrow_api_url_summary"
        android:title="@string/dearrow_api_url_title"/>

    <EditTextPreference
        app:iconSpaceReserved="false"
        android:dependency="@string/dearrow_enable_key"
        android:defaultValue="@string/dearrow_default_thumbnail_url"
        android:key="@string/dearrow_thumbnail_url_key"
        android:summary="@string/dearrow_thumbnail_url_summary"
        android:title="@string/dearrow_thumbnail_url_title"/>

</PreferenceScreen>
