<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="vertical"
    android:paddingLeft="24dp"
    android:paddingRight="24dp"
    android:paddingTop="16dp"
    android:paddingBottom="16dp">

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/dearrow_submit_title_hint"
        android:textAppearance="?android:attr/textAppearanceSmall"
        android:layout_marginBottom="8dp" />

    <EditText
        android:id="@+id/dearrow_submit_title_edit"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="16dp"
        android:saveEnabled="true"
        android:inputType="textCapSentences|textMultiLine"
        android:maxLines="3"
        android:importantForAutofill="no"
        android:hint="@string/dearrow_submit_title_hint"/>

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/dearrow_submit_thumbnail_options"
        android:textAppearance="?android:attr/textAppearanceSmall"
        android:layout_marginBottom="8dp" />

    <CheckBox
        android:id="@+id/dearrow_submit_timestamp_checkbox"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="8dp"
        android:text="@string/dearrow_submit_timestamp" />

    <CheckBox
        android:id="@+id/dearrow_submit_original_checkbox"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="8dp"
        android:text="@string/dearrow_submit_original" />

</LinearLayout>
